volume button mobile fix

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -593,6 +593,7 @@
   font-size: 16px;
   border: none;
   cursor: pointer;
+  pointer-events: none;
   border-radius: 50%;
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.15);
 }
